--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>Data Structure and Algorithms with JS</h1>
 
-    <script src="./strings.js"></script>
+    <script src="./arrays.js"></script>
   </body>
 </html>
